--- a/front/package.json
+++ b/front/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "lespetitsplats",
+  "name": "front",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "sass": "sass --watch sass/main.scss css/style.css"
   },
-  "author": "Sebastien Proust",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "sass": "^1.54.0"
+    "sass": "^1.54.1"
   }
 }
